Migration Checkpoint 1: Framework DrakesCraft harmonizado. Migrados: Networks, LiteXpansion, EMC2. Resolucion de dependencias Maven optimizada.